# SPDX-FileCopyrightText: 2021 codedust
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "leika"
version = "0.1.0"
authors = []
description = "download leika.csv and convert it to UTF-8"

[tool.poetry.dependencies]
python = "^3.9"
pyquery = "^1.4.3"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
